<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_control_pal</name>
  <version>1.0.0</version>
  <description>MuJoCo ROS port of PAL's gazebo_ros_control plugin fork</description>

  <!-- <url type="repository">https://github.com/ubi-agni/mujoco_hog_plugin</url>
  <url type="bugtracker">https://github.com/ubi-agni/mujoco_hog_plugin/issues</url> -->

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <author>David Leins</author>

  <license>BSD</license>


  <!--
    Need to use libgazebo5-dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
 <!-- <run_depend>libgazebo5-dev</run_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>angles</build_depend>

  <depend>roscpp</depend>
  <depend>mujoco_ros</depend>

  <!--
    Need to use libgazebo5-dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
 <!-- <run_depend>libgazebo5-dev</run_depend> -->
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>angles</exec_depend>

  <export>
    <mujoco_ros plugin="${prefix}/mujoco_ros_control_pal_plugin.xml" />
    <mujoco_ros_control_pal plugin="${prefix}/robot_hw_sim_pal_plugins.xml"/>
  </export>
</package>
